# tiedie

./: .bumpversion.cfg  .coveragerc  .cruft.json  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-security.yml  ci-testing-unit.yml
docs/: index.md
docs/reference/: api.md
reference/api/: index.html
search/: search_index.json
tests/: conftest.py  test_integration.py  test_kernel.py  test_util.py
tiedie/: __init__.py  _metadata.py  cli.py  distance.py  distributions.py  kernel.py  kernel_scipy.py  linkers.py  master_reg.py  permute.py  ppr.py  util.py
